# django-anonymise

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG  README  README.md  pyproject.toml  tox.ini
.github/workflows/: tox.yml
anonymise/: apps.py  models.py
anonymise/management/commands/: anonymise.py  anonymise_model_objects.py
anonymiser/: apps.py  decorators.py  models.py  redacters.py  registry.py  settings.py
anonymiser/db/: __init__.py  expressions.py  functions.py
anonymiser/management/commands/: anonymisation_config.py  display_all_fields.py  display_model_anonymisation.py
anonymiser/templates/: display_model_anonymisation.md  field_summary.md
anonymiser/templates/anonymiser/: anonymisation_config.csv  display_model_anonymisation.md
demo/: models.py  settings.py
demo/migrations/: 0001_initial.py
tests/: anon.py  anonymisers.py  apps.py  conftest.py  model_anonymisation.md  models.py  settings.py  settings_postgres.py  test_db.py  test_expressions.py  test_models.py  test_models_pg.py  test_registry.py
tests/migrations/: 0001_initial.py  0002_user_uuid.py  0003_user_biography_user_date_of_birth_user_location.py  0004_user_extra_info.py  0005_user_state.py
