[tool.poetry]
name = "django-anonymise"
version = "0.1.0"
description = "Project template for Django app, using Poetry."
license = "MIT"
authors = ["YunoJuno <code@yunojuno.com>"]
maintainers = ["YunoJuno <code@yunojuno.com>"]
readme = "README.md"
homepage = "https://github.com/yunojuno/django-anonymiser"
repository = "https://github.com/yunojuno/django-anonymiser"
documentation = "https://github.com/yunojuno/django-anonymiser"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
packages = [{ include = "anonymiser" }]

[tool.poetry.dependencies]
python = "^3.10"
django = "^3.2 || ^4.0 || ^5.0"
# optional - used for testing with Postgres
psycopg2-binary = { version = "*", optional = true }

[tool.poetry.group.dev.dependencies]
dj-database-url = "*"
black = "*"
coverage = "*"
freezegun = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
ruff = "*"
tox = "*"

[tool.poetry.extras]
postgres = ["psycopg2-binary"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
