[tool.poetry]
name = "django-anonymise"
version = "2023.11.16"
description = "Django app used to manage production data anonymisation."
license = "MIT"
authors = ["YunoJuno <code@yunojuno.com>"]
maintainers = ["YunoJuno <code@yunojuno.com>"]
readme = "README"
homepage = "https://github.com/yunojuno/django-anonymiser"
repository = "https://github.com/yunojuno/django-anonymiser"
documentation = "https://github.com/yunojuno/django-anonymiser"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{ include = "anonymiser" }]

[tool.poetry.dependencies]
python = "^3.11"
django = "^3.2 || ^4.0 || ^5.0"
# optional - used for testing with Postgres
psycopg2-binary = { version = "*", optional = true }

[tool.poetry.group.dev.dependencies]
black = "*"
mypy = "*"
pre-commit = "*"
ruff = "*"

[tool.poetry.group.test.dependencies]
coverage = "*"
dj-database-url = "*"
freezegun = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
tox = "*"

[tool.poetry.extras]
postgres = ["psycopg2-binary"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
